--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <use xlink:href="img/sprite.svg#icon-github"></use></svg>
             </a>
           </div>
-          <div class="project project-4">
+          <!-- <div class="project project-4">
             <h3 class="project-name">project-4</h3>  
             <button class="project-button">Visit</button>
             <a href="https://github.com/aranyak1" target="_blank">
@@ -116,7 +116,7 @@
               <svg class="github-icon pro-github-icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use></svg>
             </a>
-          </div>
+          </div> -->
           <button class="project-button project-button-1 invisible">SEE LESS</button>
         </div>
       </section>
