--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <nav class="navigation">
         <ul class="nav-list-1">
-          <a href=""><li class="nav-item-1">HOME</li></a>
-          <a href=""><li class="nav-item-1">ABOUT</li></a>
+          <a href="#"><li class="nav-item-1">HOME</li></a>
+          <a href=""><li class="nav-item-1">RESUME</li></a>
           <a href="#projects-sec"><li class="nav-item-1">MY WORK</li></a>
           <a href="#form-sec"><li class="nav-item-1">CONTACT</li></a>
         </ul>
@@ -38,12 +38,12 @@
       <div class="mobile-nav-page invisible">
         <ul class="mobile-nav-list-1">
           <li class="nav-item-1">HOME</li>
-          <li class="nav-item-1">ABOUT</li>
+          <li class="nav-item-1">RESUME</li>
           <a href="#projects-sec"><li class="nav-item-1">MY WORK</li></a>
           <a href="#form-sec"><li class="nav-item-1">CONTACT</li></a>
         </ul>
         <div class="mobile-nav-list-2">
-                <a href="https://github.com/aranyak1" target="_blank">
+                <a href="https://www.linkedin.com/in/aranyak-panigrahi-43462014a/" target="_blank">
                     <svg class="linkedin-icon">
                       <use xlink:href="img/sprite.svg#icon-linkedin1"></use></svg>
                   </a>
@@ -70,25 +70,25 @@
         </div>
         <div class="project-container">
           <div class="project project-1">
-            <h3 class="project-name">project-1</h3>  
-            <button class="project-button">Visit</button>
-            <a href="https://github.com/aranyak1" target="_blank">
+            <h3 class="project-name">Adventours</h3>  
+            <a href="https://adventours1.herokuapp.com" class="project-button">Visit</a>
+            <a href="https://github.com/aranyak1/adventours" target="_blank">
               <svg class="github-icon pro-github-icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use></svg>
             </a>
         </div>
           <div class="project project-2">
-            <h3  class="project-name">project-2</h3>  
-            <button class="project-button">Visit</button>
-            <a href="https://github.com/aranyak1" target="_blank">
+            <h3  class="project-name">Rooms</h3>  
+            <a href="https://github.com/aranyak1/rooms" class="project-button">Visit</a>
+            <a href=" https://rooms123.herokuapp.com/" target="_blank">
               <svg class="github-icon pro-github-icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use></svg>
             </a>
           </div>
           <div class="project project-3">
-            <h3 class="project-name">project-3</h3>  
-            <button class="project-button ">Visit</button>
-            <a href="https://github.com/aranyak1" target="_blank">
+            <h3 class="project-name">Portfolio Site</h3>  
+            <a href="https://aranyak1.github.io/portfolio-site/" class="project-button ">Visit</a>
+            <a href="https://github.com/aranyak1/portfolio-site" target="_blank">
               <svg class="github-icon pro-github-icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use></svg>
             </a>
@@ -98,28 +98,28 @@
       <section id="form-sec" class="form-sec">
         <div class="form-div">
              <h2 class="sec-head sec-head-2">CONTACT ME</h2>
-          <form action="" id='form' class='form'>
+          <form action="https://formspree.io/f/xbjpkqqb" id='form' class='form' method="POST">
               <div class="form-control">
                   <label for="name"></label>
-                  <input type="text" id="name" placeholder="Your  Name">
+                  <input type="text" name="name" id="name" placeholder="Your  Name">
                  
               </div>
               <div class="form-control">
                 <label for="email"></label>
-                <input type="text" id="email" placeholder="Your  Email">
+                <input type="text" name="email" id="email" placeholder="Your  Email">
                 
             </div>
             <div class="form-control">
               <label for="message"></label>
               <textarea name="message" id="message" cols="47" rows="12" placeholder="Enter  Message..."></textarea>
           </div>
-          <button>Submit</button>
+          <button type="submit">Submit</button>
           </form>
         </div>
       </section>
       <footer>
           <div>
-            <a href="https://github.com/aranyak1" target="_blank">
+            <a href="https://www.linkedin.com/in/aranyak-panigrahi-43462014a/" target="_blank">
               <svg class="f-linkedin-icon">
                 <use xlink:href="img/sprite.svg#icon-linkedin1"></use></svg>
             </a>
@@ -127,11 +127,11 @@
               <svg class="f-github-icon">
                 <use xlink:href="img/sprite.svg#icon-github"></use></svg>
             </a>
-            <a href="https://github.com/aranyak1" target="_blank">
+            <a href="#" target="_blank">
               <svg class="f-gmail-icon">
                 <use xlink:href="img/sprite.svg#icon-gmail"></use></svg>
             </a>
-            <a href="https://github.com/aranyak1" target="_blank">
+            <a href="#" target="_blank">
               <svg class="f-facebook-icon">
                 <use xlink:href="img/sprite.svg#icon-facebook2"></use></svg>
             </a>
