updated nav bug

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <nav class="navigation">
         <ul class="nav-list-1">
           <a href="#"><li class="nav-item-1">HOME</li></a>
-          <a href=""><li class="nav-item-1">RESUME</li></a>
+          <a href="https://drive.google.com/file/d/19KiXe8qC5QNIaJhy-FzE1cbzDNGxlCpW/view?usp=sharing" target="_blank"><li class="nav-item-1">RESUME</li></a>
           <a href="#projects-sec"><li class="nav-item-1">MY WORK</li></a>
           <a href="#form-sec"><li class="nav-item-1">CONTACT</li></a>
         </ul>
         <div class="nav-list-2">
-                <a href="https://github.com/aranyak1" target="_blank">
+                <a href="https://www.linkedin.com/in/aranyak-panigrahi-43462014a/" target="_blank">
                     <svg class="linkedin-icon">
                       <use xlink:href="img/sprite.svg#icon-linkedin1"></use></svg>
                   </a>
@@ -37,8 +37,8 @@
 
       <div class="mobile-nav-page invisible">
         <ul class="mobile-nav-list-1">
-          <li class="nav-item-1">HOME</li>
-          <li class="nav-item-1">RESUME</li>
+          <a href="#"><li class="nav-item-1">HOME</li></a>
+          <a href="https://drive.google.com/file/d/19KiXe8qC5QNIaJhy-FzE1cbzDNGxlCpW/view?usp=sharing" target="_blank"><li class="nav-item-1">RESUME</li></a>
           <a href="#projects-sec"><li class="nav-item-1">MY WORK</li></a>
           <a href="#form-sec"><li class="nav-item-1">CONTACT</li></a>
         </ul>
@@ -59,8 +59,8 @@
       <header>
           <h1 id="typing"></h1>
           <div id="button-holder">
-            <button class="btn btn-color">MY WORK</button>
-            <button class="btn btn-trans">CONTACT</button>
+            <a href="#projects-sec"><button class="btn btn-color">MY WORK</button></a>
+            <a href="#form-sec"><button class="btn btn-trans">CONTACT</button></a>
           </div>
       </header>
      
